@startuml sudoku
abstract Controller {
  # view: View
  # game: Game
  {abstract} Update()
}

abstract View {
  + Inputs: IEnumerable<Input>
  {abstract} Render()
}

class GameController {
  - game: Game
  - view: View
  + GetCells(): Integer
  + ChangeCell(cell: Cell)
  + ChangeState()
}
class GameView {
  + ChangeCell(cell: Cell)
  + ChangeState()
  - Render(cells: Cell[])
}

class StartController {
  - view: View
  + Start()
}

class StartView {}

class Input {
  - Key: Integer
  - Action: Action
}

GameView --|> View
StartView --|> View

StartController --|> Controller
GameController --|> Controller
StartController --- StartView
GameController --- GameView

GameView --- Character

View --- Input
View --- Controller
@enduml
